# toolbox-parallel-robots

./: .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  default.nix  flake.nix  package.nix  package.xml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  nix.yml  release.yml  update-flake-lock.yml
example/: slider_battobot.py  slider_example.py
example/battobot/: 07170-03x40.part  07534-10x50.part  1.part  ^_ec-8112-p1-18(2)_ec-8112-p1-18.part  achilles_rod_big_6d_1.part  achilles_rod_small_6d_2.part  ankle_actuation.part  ankle_actuation.stl  anlkle_motor_transmission.part  anlkle_motor_transmission.stl  axis__foot_ankle.part  axis__foot_ankle.stl  axis_knee_transmission.part  axis_knee_transmission.stl  axis_motor.part  axis_shin_knee.part  axis_shin_knee.stl  bearing_10_19_7.part  bearing_10_19_7.stl  bearing_10_19_9.part  bearing_20_32_7.part  bearing_25_32_7.part  bearing_25_37_7.part  cage_rmd150.part  cage_x8-90.part  cage_x8-90.stl  config.json  conical_spring_lock_washer_m10.part  conical_spring_lock_washer_m6.part  conique_bearing_20.part  ec-a10020-12-µç»úºó¸ç-¿í»§.part  ec-a10020-12-¶¨×ó×ùíâ¿ç-¿í»§.part  ec-a10020-12-êä³ö¶ëöá³ð¸ç-¿í»§.part  ec-a10020-12-êä³ö·¨à¼-¿í»§.part  entretoise_10_12_4.part  entretoise_10_13_6.5.part  entretoise_10_13_8.part  entretoise_10_14_10.5.part  entretoise_10_14_11.part  entretoise_10_14_11.stl  (+102 more)
toolbox_parallel_robots/: __init__.py  actuation.py  actuation_data.py  closures.py  constraints.py  forward_kinematics.py  freeze_joints.py  inverse_dynamics.py  inverse_kinematics.py  jacobian.py  mounting.py  projections.py
toolbox_parallel_robots/sliders/: foo.py  slider_generation.py  tk_robot_sliders.py  tk_sliders_manager.py  util_frames.py
unittest/: test_jacobian.py
