[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[project]
name = "toolbox-parallel-robots"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Virgile Batto", email = "vbatto@laas.fr" },
    { name = "Ludovic De Matteis", email = "ldematteis@laas.fr" }
]
maintainers = [
    { name = "Guilhem Saurel", email = "guilhem.saurel@laas.fr" }
]
requires-python = ">=3.8"
dependencies = [
    "pin>=3.7.0",
]

[tool.uv.build-backend]
module-root = ""
